--- a/src/global.css
+++ b/src/global.css
@@ -113,8 +113,8 @@ body {
   /* On iOS 100dvh doesn't adjust to keyboard height correctly so we set a
    * CSS variable in main.tsx on each resize. */
   height: var(--viewport-height, 100dvh);
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left) !important;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) 0
+    env(safe-area-inset-left) !important;
   position: relative;
 }
 
